# kra-system

./: .dockerignore  .editorconfig  .env.example  .gitignore  .prettierignore  BUILD_PHASES.md  LICENSE  README.md  docker-compose.yml  package-lock.json  package.json
.github/workflows/: ci.yml
apps/analytics/: README.md  pyproject.toml  requirements.txt
apps/analytics/app/: main.py  risk_scoring.py
apps/analytics/tests/: conftest.py  test_health.py  test_risk_scoring.py
apps/api/: Dockerfile  README.md  pom.xml
apps/api/src/main/resources/: application.yaml
apps/api/src/main/resources/db/migration/: V10__phase12_ml_risk_scoring.sql  V11__phase13_graph_intelligence.sql  V12__phase14_governance_security_privacy.sql  V13__phase15_reports_and_overlooked_rules.sql  V14__phase17_government_integration_readiness.sql  V1__init.sql  V2__security_baseline.sql  (+7 more)
apps/web/: package.json  playwright.config.ts  tailwind.config.ts  tsconfig.tsbuildinfo
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/components/: dashboard-app.tsx  query-provider.tsx
apps/web/src/lib/: api.ts  demo-data.ts  types.ts
apps/web/tests/: dashboard.spec.ts
data/schemas/synthetic/: README.md
docs/: PHASE_1_RUNBOOK.md  START_BACKEND.md  local-postgres-setup.sql
docs/phase16/: README.md  data-processing-overview.md  demo-script.md  deployment-overview.md  pilot-proposal.md  pricing-procurement.md  sample-dashboards.md  sample-evidence-packs.md  security-overview.md
infra/neo4j/: phase13_graph_intelligence.cypher
scripts/generate-synthetic-data/: generate.py
(+177 files in other folders)
