[project]
name = "kra-revenue-analytics"
version = "0.1.0"
description = "Analytics API skeleton for the Revenue Intelligence platform."
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.5",
  "uvicorn[standard]==0.32.1"
]

[project.optional-dependencies]
dev = [
  "httpx==0.27.2",
  "pytest==8.3.3",
  "ruff==0.8.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
